--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,3 +1,36 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.fc .fc-button-primary:disabled {
+    background-color: #989898;
+    opacity: 100%;
+}
+
+.fc .fc-button-primary {
+    background-color: #5d5e5f;
+    border: none;
+}
+
+.fc .fc-button-primary:hover {
+    background-color: #4f5152;
+    cursor: pointer;
+}
+
+
+@media (prefers-color-scheme: dark) {
+    body,
+    .p-menubar {
+        background: #333333 !important;
+        color: #f0f0f0;
+    }
+
+    .p-menubar-item:not(.p-disabled) > .p-menubar-item-content:hover {
+        background: #7272758f;
+    }
+}
+
+@media (prefers-color-scheme: light)
+
+[
+]
