add rotate icon for small devices

--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -17,11 +17,24 @@
     cursor: pointer;
 }
 
+.mobile-rotate {
+    display: none;
+}
+
+@media (max-width: 400px) {
+    .mobile-rotate {
+        display: block;
+    }
+}
+
+
 html {
     &.dark-mode {
+        $background: #333;
+
         body,
         .p-menubar {
-            background: #333333 !important;
+            background: $background !important;
             color: #f0f0f0;
         }
 
@@ -35,6 +48,14 @@ html {
 
         .p-menubar-item:not(.p-disabled) > .p-menubar-item-content:hover {
             background: #7272758f;
+        }
+
+        .mobile-rotate {
+            background-color: $background;
+
+            & img {
+                color: #FFF;
+            }
         }
     }
 
@@ -53,6 +74,14 @@ html {
 
         .total-people-button:hover {
             background-color: #059669 !important;
+        }
+
+        .mobile-rotate {
+            background-color: #FFF;
+
+            img {
+                color: #000;
+            }
         }
     }
 }
