--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -72,6 +72,14 @@ html {
     .p-menubar-item:not(.p-disabled) > .p-menubar-item-content:hover {
       background: #7272758f;
     }
+
+    .section {
+      background: #7272758f;
+
+      h2, p {
+        color: #FFF;
+      }
+    }
   }
 
   &:not(.dark-mode) {
