add border radius

--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -40,6 +40,14 @@ html {
   .fc .fc-toolbar-title {
     margin-left: 150px;
   }
+
+  .section {
+    border-radius: 6px;
+
+    & > div {
+      border-radius: 6px 0 0 6px;
+    }
+  }
 }
 
 html {
